--- a/src/App.css
+++ b/src/App.css
@@ -12,13 +12,12 @@
 }
 
 .blue {
-  color: rgb(74, 126, 237);
+  color: #0290FF;
 }
 
 .Nav-bar {
   justify-content: space-between;
   padding: 20px 50px;
-  background: rgb(240, 235, 235);
 }
 
 .Links ul li {
@@ -27,30 +26,67 @@
 
 .Links ul li a {
   text-decoration: none;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 600;
   padding: 0 20px;
+  color: rgb(116, 116, 116);
+}
+
+.Main-content {
+  background: #f5f6fa;
+}
+
+.list {
+  padding-bottom: 50px;
+  border-bottom: 1px solid  rgb(206, 204, 204);
+}
+
+.Main-content ul {
+  padding-top: 20px;
+  margin: 20px 50px;
+}
+
+.Main-content ul li {
+  list-style: none;
 }
 
 .abook {
   justify-content: space-between;
-  padding: 20px 50px;
+  background: #fff;
+  margin: 20px 0;
+  border: 2px solid rgb(206, 204, 204);
 }
 
 .first-row {
   flex-direction: column;
   align-items: flex-start;
+  padding: 20px;
+}
+
+.genre {
+  font-weight: 700;
+  font-size: 15px;
+  color: rgb(206, 204, 204);
 }
 
 .first-row p {
   padding: 5px;
 }
 
+.control-buttons {
+  padding-top: 10px;
+}
+
 .control-buttons button {
   border: none;
   background-color: #fff;
   width: 74px;
-  color: rgb(88, 67, 247);
+  color: #0290FF;
+  border-right: 2px solid rgb(206, 204, 204);
+}
+
+.control-buttons button:nth-child(3) {
+  border-right: none;
 }
 
 .second-row {
@@ -58,23 +94,78 @@
   justify-content: space-around;
 }
 
+.state {
+  width: 50%;
+  border-right: 1px solid rgb(116, 116, 116);
+}
+
+.percentage {
+  font-size: 30px;
+}
+
+.completed {
+  color: rgb(116, 116, 116);
+}
+
 .circle {
   height: 70px;
   width: 70px;
   margin-right: 20px;
-  border: 5px solid rgb(51, 61, 151);
-  border-left: 5px solid rgb(207, 187, 187);
+  border: 5px solid #0290FF;
+  border-left: 5px solid rgb(206, 204, 204);
   border-radius: 50%;
+  transform: rotate(40deg);
+}
+
+.process p {
+  padding-bottom: 10px;
+}
+
+.button {
+  height: 40px;
+  padding: 10px 40px;
+  border: none;
+  color: #fff;
+  border-radius: 3px;
+  background: #0290FF;
+}
+
+.form-container {
+  padding: 10px 50px;
+}
+
+.form-container h3 {
+  color: rgb(116, 116, 116);
+  padding-bottom: 10px;
 }
 
 .form {
   justify-content: space-between;
-  padding: 20px;
+  padding-bottom: 50px;
+}
+
+form input:nth-child(1) {
+  width: 55%;
 }
 
 .form input {
   padding: 10px;
   font-size: 20px;
   outline: none;
-  border: 2px solid #000;
+  border: 2px solid rgb(206, 204, 204);
+}
+
+.profile {
+  font-size: 20px;
+  border-radius: 50%;
+  padding: 5px;
+  border: 2px solid rgb(206, 204, 204);
+}
+
+.categories {
+  margin: 50px;
+}
+
+.categories p {
+  font-size: 20px;
 }
